<resources>
    <string name="app_name">Sports Dating</string>
    <string name="prompt_email">Please enter your email</string>
    <string name="prompt_password">Please entere your password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="Dating">GroupUP</string>
    <string name="Moments">Moments</string>
    <string name="Message">Message</string>
    <string name="Mine">Mine</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="touxiang_name">
        <item>Vincent</item>
        <item>Kobe Bryant</item>
        <item>LeBron James</item>
        <item>West Brook</item>
        <item>Ja Morant</item>
        <item>Daniels Antonio</item>
        <item>Dalembert Samuel</item>
        <item>Wade</item>
        <item>Thompson Klay</item>
        <item>Bk Lyn</item>
        <item>LeBron James2</item>
        <item>Jordon</item>
        <item>Curry Eddy</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MassageWindow1">MessageWindow1</string>
    <string name="PersonnalInfo">Personal Information</string>
    <string name="History">History</string>
    <string name="popular">POPULAR</string>
    <string name="nearby">NEARBY</string>
    <string name="follows">FOLLOWS</string>
    <string name="Notations">NOTATIONS</string>
    <string name="Friends">FRIENDS</string>
    <string name="signup">"No account? Sign Up Now"</string>
    <string name="login">LOGIN</string>
    <string name="verfity">please enter your verfity code</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="Setting">Settings</string>
    <string name="search">Search</string>
    <string name="add_post">+</string>
    <string name="user_name">Vincent</string>
    <string name="btn_post">POST</string>
    <string name="tv_cancelpost">cancel</string>
    <string name="pt_postWords">Please say something...</string>
    <string name="location">location</string>
    <string name="mine_tv_appointment">MY Appointment</string>
    <string name="court_name">Basketball Court Name</string>
    <string name="mine_tv_location">Basketball court Location</string>
    <string name="btn_leave">Leave</string>
    <string name="moments_p1_content1">First game</string>
    <string name="ico_name1">Kobe Bryant</string>
    <string name="ico_time1">Now</string>
    <string name="ico_name2">Jordan</string>
    <string name="ico_content2">I\'m Strong</string>
    <string name="ico_time2">30 minutes ago</string>
    <string name="notification">NOTIFICATION</string>
    <string name="mine_tv_time">13:30 Tuesday</string>
    <string name="btn_join">JOIN</string>
    <string name="btn_confrim">CONFIRM</string>
    <string name="block">Block</string>
    <string name="ico_totalLike">237</string>
    <string name="tv_totalcomment">34</string>
    <string name="tv_totalRe">46</string>
    <string name="tv_createTeam">Create A New Team</string>
    <string name="teamTime">Time</string>
    <string name="teamLocation">Location</string>
    <string name="teamActivity">Activity</string>
    <string name="teamDate">Date</string>
    <string name="teamDateTime">Date and Time</string>
    <string name="activity_name">Activity Name</string>
    <string name="et_friendsList">Friends List</string>
    <string name="my_appointment">My Appintment</string>
    <string name="useritemName">UserItemName</string>
    <string name="switch_join">Joined</string>
    <string name="switch_leave">Leaved</string>
    <string name="tv_messages_messages">Messages</string>
    <string name="tv_messages_notification">Notification</string>
    <string name="tv_userName">LeBron James</string>
    <string name="tv_messageItem_content">Hey,do you want to come to the party?</string>
    <string name="tv_messsages_username1">LeBron James</string>
    <string name="tv_messsages_username2">Curry Eddy</string>
    <string name="tv_messsages_username3">Dalembert Samuel</string>
    <string name="tv_messsages_username4">Daniels Antonio</string>
    <string name="tv_messsages_username5">Dixon Juan</string>
    <string name="tv_messages_content1">Do you want to go to the party?</string>
    <string name="tv_messages_content6">Let\'s go to the zoo</string>
    <string name="tv_messages_content5">We have a game tonight</string>
    <string name="tv_messages_content2">I miss you ,bro</string>
    <string name="tv_messages_content4">I like Kobe Bryant</string>
    <string name="tv_mine">Mine</string>
    <string name="tv_userage">Age</string>
    <string name="tv_privacy">Privacy</string>
    <string name="tv_accountPassword">Account and Password</string>
    <string name="btn_person_logout">Logout</string>
    <string name="tv_username">Vincent</string>


</resources>