<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_item_groupup"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/Dating"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_item_Moments"
        android:icon="@mipmap/ic_theaters_black_48dp"
        android:title="@string/Moments"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_item_Message"
        android:icon="@mipmap/ic_question_answer_black_48dp"
        android:title="@string/Message"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_item_mine"
        android:icon="@mipmap/ic_account_circle_black_48dp"
        android:title="@string/Mine"
        app:showAsAction="always" />

</menu>