<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <Button
        android:id="@+id/button_moment_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_createTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_cancelpost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pt_postWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:ems="10"
        android:hint="@string/pt_postWords"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_moment_post" />

    <ImageView
        android:id="@+id/post_iv_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"

        android:defaultFocusHighlightEnabled="true"
        app:layout_constraintStart_toEndOf="@+id/iv_post_image"
        app:layout_constraintTop_toBottomOf="@+id/pt_postWords"
        app:srcCompat="@drawable/add_images2" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/post_iv_photo">

        <ImageView
            android:id="@+id/mine_iv_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_room_black_24dp" />

        <TextView
            android:id="@+id/post_tv_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="4"
            android:text="@string/location" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_post_image"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_postWords"
        app:srcCompat="@drawable/momentbg2" />
</androidx.constraintlayout.widget.ConstraintLayout>