<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/touxiang2" />

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/iv_user"
        android:text="@string/ico_name1"
        android:textColor="#576B95" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_userName"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/iv_user"

        android:text="@string/moments_p1_content1" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_content"

        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_toRightOf="@id/iv_user"
        android:adjustViewBounds="true"
        android:nestedScrollingEnabled="false"
        android:src="@drawable/momentim01" />

    <TextView
        android:id="@+id/tv_totalLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/iv_user"
        android:text="@string/ico_time1"
        android:textColor="#9A9A9A" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:src="@mipmap/ic_thumb_up_black_24dp" />
</RelativeLayout>