<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <TextView
        android:id="@+id/tv_createTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_createTeam"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_teamActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/teamActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_createTeam" />

    <LinearLayout
        android:id="@+id/linearLayout_Activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_teamActivity">

        <CheckBox
            android:id="@+id/checkBox_basketBall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Basketball" />

        <CheckBox
            android:id="@+id/checkBox_football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Football" />

        <CheckBox
            android:id="@+id/checkBox_running"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Running" />

        <CheckBox
            android:id="@+id/checkBox_BasketBall2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other Sports" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_teamDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/teamDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Activities" />

    <TextView
        android:id="@+id/tv_teamTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="190dp"
        android:text="@string/teamTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_teamDate" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:maxDate="01/01/2032"
        android:minDate="01/01/2022"
        android:spinnersShown="true"
        app:layout_constraintStart_toEndOf="@+id/tv_teamDate"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Activities" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toEndOf="@+id/tv_teamTime"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <TextView
        android:id="@+id/tv_teamLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/teamLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

    <Button
        android:id="@+id/button_moment_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confrim"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="655dp" />

    <Button
        android:id="@+id/button_time_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_confrim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timePicker"
        app:layout_constraintTop_toBottomOf="@+id/button_date_confirm" />

    <Button
        android:id="@+id/button_date_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_confrim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/datePicker"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Activities" />

    <EditText
        android:id="@+id/et_input_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="585dp" />


</androidx.constraintlayout.widget.ConstraintLayout>